--- a/package.json
+++ b/package.json
@@ -1,1 +1,35 @@
-{"name":"pokemon-card-checker","version":"1.0.0","type":"module","main":"server.js","scripts":{"start":"node server.js","update-sets":"node update-sets.js"},"dependencies":{"bcrypt":"^6.0.0","body-parser":"^2.2.0","cors":"^2.8.5","dotenv":"^17.2.3","express":"^4.19.0","jsonwebtoken":"^9.0.2","mongodb":"^6.6.0","next":"^15.5.4","node-fetch":"^3.3.2","react":"^19.2.0"},"devDependencies":{"@eslint/js":"^9.38.0","eslint":"^9.38.0","globals":"^16.4.0"}}
+{
+  "name": "pokemon-card-checker",
+  "version": "2.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "legacy-server": "node server.js"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.0",
+    "next": "^15.5.4",
+    "node-fetch": "^3.3.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "swr": "^2.3.6"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^15.5.4",
+    "typescript": "^5"
+  }
+}
