--- a/.env.local.example
+++ b/.env.local.example
@@ -15,5 +15,13 @@ POKEMONPRICETRACKER_API_KEY=your_pokemon_price_tracker_key_here
 # JustTCG: https://justtcg.com/
 JUSTTCG_API_KEY=your_justtcg_api_key_here
 
+# PokeFetch API: https://pokefetch.info/
+POKEFETCH_API_KEY=your_pokefetch_api_key_here
+
+# Application URL (required for exchange rate optimization and API calls)
+# Development: http://localhost:3000
+# Production: https://your-domain.vercel.app
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
 # Node Environment
 NODE_ENV=development
